# project-lily

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MIGRATION_PLAN.md  README.md  SECURITY.md  STRICT_TYPING_BENEFITS.md  TOOL_ARCHITECTURE.md  conftest.py  justfile  noxfile.py  playground.py  pyproject.toml  pytest.ini
.agent-os/instructions/: create-spec.md  execute-tasks.md
.agent-os/product/: decisions.md  mission.md  roadmap.md  tech-stack.md
.agent-os/specs/: core-cli-framework.md  lily-petal-workflow-system.md  petal-command-system.md
.agent-os/standards/: best-practices.md  code-style.md
.cursor/rules/: agent-os.mdc  analyze-product.mdc  archon.mdc  cli-testing.mdc  model-cleanup.mdc  stuffit.mdc  testing-rules.mdc
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci_nox.yml  codeql.yml  commitizen.yml  docs.yml
.runs/11e4178f-d6e1-4696-a022-728e052da52a/: final_20250816_154803.json  step_step1_20250816_154803.json
.runs/164f4683-3b2c-493c-a5ce-f6982e2b47cd/: final_20250816_154104.json  step_step1_20250816_154104.json  step_step2_20250816_154104.json
.runs/1ccfa869-b6ab-4437-b9d8-56f2e56ee6ae/: final_20250816_155639.json  step_step1_20250816_155639.json
.runs/1e4691d1-ecda-43a9-924b-5d0e735459a9/: final_20250816_154756.json  step_step1_20250816_154756.json  step_step2_20250816_154756.json
.runs/20573d77-8ffd-4e6e-a941-80c79880e9d5/: final_20250816_153854.json
.runs/25b41b1c-3f5b-4bbd-99cb-fcb011952e66/: final_20250816_154019.json
.runs/26f3e45b-0a12-42d7-aca6-4bb1350721a1/: final_20250816_154009.json
.runs/28f6d12e-8963-4b5a-9568-8754ccc73f92/: final_20250816_154845.json  step_step1_20250816_154845.json  step_step3_20250816_154845.json
.runs/2d543588-3dac-4abd-9efa-473c9b0bdc7b/: final_20250816_154827.json  step_step1_20250816_154827.json
.runs/2e8a156f-f6dd-488f-b653-d4dfaae4bab4/: final_20250816_154847.json  step_step1_20250816_154847.json
.runs/31ae5726-6f8b-45d1-99ee-830f023c208c/: final_20250816_154756.json  step_step1_20250816_154756.json  step_step3_20250816_154756.json
.runs/393b34d7-b46d-46a9-9f82-38ef5c7345e6/: final_20250816_154800.json  step_step1_20250816_154800.json  step_step2_20250816_154800.json
.runs/3b5b3f43-7aab-4f86-91bf-195d77eaa2cc/: final_20250816_154845.json  step_step1_20250816_154845.json  step_step2_20250816_154845.json
.runs/408b8b89-4ebb-42dc-b84b-c816fbf22470/: final_20250816_154746.json  step_step1_20250816_154746.json  step_step2_20250816_154746.json
.runs/414c2043-77fd-4d3a-ad50-29edc1caf4ba/: final_20250816_154830.json  step_step1_20250816_154830.json
.runs/4303c371-3e67-4c92-949c-4387076b2226/: final_20250816_153854.json
.runs/677bfeb4-c4c6-47d1-945b-5161afb85161/: final_20250816_154758.json  step_step1_20250816_154758.json  step_step2_20250816_154758.json
.runs/70f55825-64f9-4323-9601-05f192c81ed4/: final_20250816_154758.json  step_step1_20250816_154758.json
.runs/7265d3a7-ce00-438e-9b73-21ab43551069/: final_20250816_154842.json  step_step1_20250816_154842.json
.runs/73072fc0-fb40-485d-bfa3-7b787fa678b5/: final_20250816_154104.json  step_step1_20250816_154104.json
.runs/7c286c1c-ce83-42d7-b37e-691db004259d/: final_20250816_154019.json  step_step1_20250816_154019.json  step_step2_20250816_154019.json
.runs/805627c1-5cc5-45b1-bd86-6eb2386fd90c/: final_20250816_154022.json  step_step1_20250816_154022.json
.runs/82559cbc-0068-458f-b485-9c2140af95a2/: final_20250816_154759.json  step_step1_20250816_154759.json
.runs/826a3a55-8bc3-4a5e-90eb-9f092e7ff14b/: final_20250816_154827.json
.runs/8dd14802-d2d3-4ef4-ae96-fe58afd4d40b/: final_20250816_154006.json  step_step1_20250816_154006.json
.runs/93ba0600-07ae-4bac-82ac-d2b12b1adb57/: final_20250816_155639.json
.runs/a3e23d63-f30e-42d8-a301-d5d63604acd2/: final_20250816_154758.json  step_step1_20250816_154758.json  step_step2_20250816_154758.json
.runs/a8660ba5-73de-48e5-8fdc-4bd67995edea/: final_20250816_154104.json  step_step1_20250816_154104.json  step_step3_20250816_154104.json
.runs/ad850483-2291-42d7-993d-676f626aab2c/: final_20250816_155639.json  step_step1_20250816_155639.json
.runs/ae18a2a0-a627-40e0-9df6-933c7f4de1fb/: final_20250816_154830.json  step_step1_20250816_154830.json  step_step2_20250816_154830.json
.runs/b4a31ab7-c821-4c60-ad96-d1e2c14e6623/: final_20250816_153854.json  step_step1_20250816_153854.json
.runs/b5a9ddd1-b6d4-4c62-8e2b-611557f8ff53/: final_20250816_154102.json  step_step1_20250816_154102.json  step_step2_20250816_154102.json
.runs/b788bae4-a18e-4e83-800c-8bd9512e8602/: final_20250816_154845.json  step_step1_20250816_154845.json
.runs/becbf5df-3de3-44cb-9964-5602ecd6d55c/: final_20250816_154845.json  step_step1_20250816_154845.json  step_step2_20250816_154845.json
.runs/da04d9ad-1ed6-4fa5-a048-8a5b25e8e3bb/: final_20250816_154022.json  step_step1_20250816_154022.json
.runs/e44892eb-ec6f-4c16-9d9d-83bc2453fc1d/: final_20250816_154842.json  step_step1_20250816_154842.json  step_step2_20250816_154842.json
.runs/e766179b-8f70-4cad-9ef3-daf1737ac1d5/: final_20250816_154009.json  step_step1_20250816_154009.json  step_step2_20250816_154009.json
.runs/e96b0e3e-266a-4551-9486-88100620cac3/: final_20250816_154104.json  step_step1_20250816_154104.json  step_step2_20250816_154104.json
.runs/ee8d54ad-d30f-4088-bfba-13054216e5eb/: final_20250816_153853.json  step_step1_20250816_153853.json  step_step2_20250816_153853.json
.runs/f04808b3-882e-4364-8f5a-5694552f9968/: final_20250816_154847.json  step_step1_20250816_154847.json  step_step2_20250816_154847.json
.runs/f72f627c-09b7-41e9-b35b-e5bf786f465b/: final_20250816_154842.json
.runs/f7fc443e-790b-4d76-97d5-c6d2addb9253/: final_20250816_154859.json  step_test_20250816_154859.json
docs/planning/: lily_cli_theme.md  (+1 more)
examples/: README.md  canonical_example.yaml  data_processing.petal  demo_workflows.py  file_backup.petal  hello_world.petal  macro_example.petal  short_form_example.petal  test_hierarchy.petal  video_processing.petal  web_scraping.petal
(+79 files in other folders)
